--- a/ch_results.tex
+++ b/ch_results.tex
@@ -368,7 +368,7 @@ The following table shows the best-fit classifier's performance across three sco
 %     \end{tabular*}
 % \end{table}
 
-\begin{landscape}% Landscape page
+%\begin{landscape}% Landscape page
 			% RAW NON TABLE SYNTHAXED VALUES
 %			$Naive Bayes$               & 0.84  & 0.82  & 0.75  & 2  && 0.64  & 0.61  & 0.31  & 2  && 0.65   & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
 			% $Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96 && 0.714 & 0.726 & 0.248 & 119 && 0.705 & 0.754 & 0.307 & 115 && 0.883 & 0.85  & 0.331 & 106 \\
@@ -376,13 +376,15 @@ The following table shows the best-fit classifier's performance across three sco
 			% $Gradient \ Tree \ Boosting$ & 0.974 & 0.978 & 0.952 & 41 && 0.838 & 0.819 & 0.291 & 54  && 0.811 & 0.855 & 0.359 & 33  && 0.885 & 0.873 & 0.384 & 47 \\
 
 	\begin{table*}\centering
-	\hskip-4.0cm\caption{Master results table comparing results for all of the classifiers run in this work.
+	%\hskip-4.0cm
+	\caption{Master results table comparing results for all of the classifiers run in this work.
 			For each task and classifer, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}\label{tab:master_table_results}
 		\ra{1.3}
-		\hskip-4.0cm\begin{tabular}{@{}rrrrrcrrrr@{}} \toprule
+		%\hskip-4.0cm
+		\begin{tabular}{@{}rrrrrcrrrr@{}} \toprule
 			&  \multicolumn{4}{c}{Problem 1} &  \phantom{abc} & \multicolumn{4}{c}{Problem 2} \\
 			\cmidrule{2-5} \cmidrule{7-10}
-			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime$ $$ && $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime$ \\ \midrule
+			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ $$ && $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
 			$Naive Bayes$               & 0.84  & 0.82  & 0.75  & 2  && 0.64  & 0.61  & 0.31  & 2   \\
 			$Logistic \ Regression$     & 0.893 & 0.857 & 0.9   & 96 && 0.714 & 0.726 & 0.248 & 119 \\
 			$Random \ Forest$            & 0.878 & 0.857 & 0.9  & 33 && 0.79  & 0.776 & 0.278 & 45  \\
@@ -391,16 +393,19 @@ The following table shows the best-fit classifier's performance across three sco
 			\bottomrule
 		\end{tabular}
 	\end{table*}
-	\addtocounter{table}{-1} % This dirty hack will fake both tables as if they were the same one.
+	%\addtocounter{table}{-1} % This dirty hack will fake both tables as if they were the same one.
+
+\medskip
 
 	\begin{table*}\centering
-      \hskip-4.0cm\caption{Master resutls table comparing results for all of the classifiers run in this work.
-			For each task and classifer, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}
+      %\hskip-4.0cm
+     % \caption{Master resutls table comparing results for all of the classifiers run in this work. For each task and classifer, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}
 		\ra{1.3}
-		\hskip-4.0cm\begin{tabular}{@{}rrrrrcrrrr@{}} \toprule
+		%\hskip-4.0cm
+		\begin{tabular}{@{}rrrrrcrrrr@{}} \toprule
 			&  \multicolumn{4}{c}{Problem 3} &  \phantom{abc} & \multicolumn{4}{c}{Problem 4} \\
 			\cmidrule{2-5} \cmidrule{7-10} %\cmidrule{10-12}
-			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime$ $$ && $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime$ \\ \midrule
+			& $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime (m)$ $$ && $Accuracy$ & $ROC AUC$ & $F1$ & $Runtime  (m)$ \\ \midrule
 			$Naive Bayes$                & 0.65  & 0.63  & 0.45  & 1   && 0.85  & 0.76  & 0.62 & 1 \\
 			$Logistic \ Regression$      & 0.705 & 0.754 & 0.307 & 115 && 0.883 & 0.85  & 0.331 & 106 \\
 			$Random \ Forest$            & 0.792 & 0.845 & 0.346 & 21  && 0.898 & 0.853 & 0.393 & 19\\
@@ -409,9 +414,9 @@ The following table shows the best-fit classifier's performance across three sco
 		\end{tabular}
 	\end{table*}
 
-\end{landscape}
+%\end{landscape}
 
-
+\medskip
 
 \cref{tab:master_table_results} exposes all combinations in model performance and runtime across the problems studied for this work.
 At a first glance there are some notable results exposed in this table.
