--- a/ch_results.tex
+++ b/ch_results.tex
@@ -31,7 +31,7 @@ With a minuscule sample of the CDRs we showed that the dataset is rich in social
 This gave us an idea of how this type of data could be leveraged to the general problem.
 We then framed our problem in the context of long-term human migrations and gave an idea of the importance of them, in relation to the epidemic nature of the disease.
 
-We noted that the dataset posed a very unbalanced classification problem as most telco users did not show any migration pattern to or from the endemic region, in the time of analysis.
+We noted that the dataset posed a very unbalanced classification problem as most Telco users did not show any migration pattern to or from the endemic region, in the time of analysis.
 This also implied that we had a very correlated problem, where most users did not change their past and present endemic conditions.
 This information, combined with the local calling nature, meant that we had correlations with the target feature.
 This was noted by seeing that users living in the endemic region will most probably have lived there in the past as well.
@@ -41,9 +41,9 @@ This is because for tree based learners, knowing where the user lived in the pre
 This information provided the algorithms with features that were highly informative.
 Yet we decided to exclude this attribute for the problem of predicting a user's past home endemic condition because we wanted to evaluate the information present in other, less trivial, features.
 
-Moreso, we found other variables having mild interactions with the condition of being a past endemic user.
-As expected, people with high mobile interactions with the endemic region, in the form of calls durations and calls counts, also resulted in attributes which were related to users having past endemic homes.
-This is most probably due to the locality effect in calling patterns, where most interactions between TelCo users occur in local regions.
+More so, we found other variables having mild interactions with the condition of being a past endemic user.
+As expected, people with high mobile interactions with the endemic region, in the form of calls duration and calls counts, also resulted in attributes which were related to users having past endemic homes.
+This is most probably due to the locality effect in calling patterns, where most interactions between Telco users occur in local regions.
 Thus users living in endemic regions would call other users nearby.
 
 
@@ -55,7 +55,7 @@ As a starting point we transformed the user-level data into a dataset at the ant
 This step aggregated information of call patterns to and from the endemic region.
 It allowed us to present geolocalized visualizations of these social interactions to the vulnerable areas.
 As an intermediate step in this process we had to introduce the definitions that we later used for the rest of this work.
-We teachnically set what we meant was a vulnerable interaction and what we find is a user's home antenna.
+We technically set what we meant was a vulnerable interaction and what we find is a user's home antenna.
 
 % For the latter we base
 
@@ -67,7 +67,7 @@ The visualizations exposed a `temperature' descent from the core regions outward
 As expected, the heat was noted to be concentrated in the ecoregion.
 We also found out that the level of vulnerable interactions per antenna gradually descends as we move further away.
 We say this is expected behavior because it is consistent with findings in the literature in which most calls are done to other local antennas. %in general of a local nature.
-Given this period and TelCo of analysis, we saw that ninety percent of the users limited usage to at most four Telco antennas.
+Given this period and Telco of analysis, we saw that ninety percent of the users limited usage to at most four Telco antennas.
 
 We also discovered some unexpected findings that were highlighted by the risk maps.
 Interactions from non-endemic antennas towards those in the endemic region were seen to be non-homogeneous in some areas.
@@ -92,13 +92,13 @@ This helped us set our Chagas problem inside a systematic process to analyze lon
 
 To do this, we broke the problem of long-term human migrations down to four tasks which were later analyzed through different classifiers.
 In these two chapters, we introduced the machine learning theory necessary to structure our problem, along with its methods to solve them.
-These models were some of the most common teachniques found in the literature for the task we were trying to solve.
+These models were some of the most common techniques found in the literature for the task we were trying to solve.
 
 To start off we considered the Logistic Regression Classifier along with the logloss metric to evaluate model performance.
 Taking to our advantage the model's more tractable formulation, we showed how model regularization fits inside the machine learning frame.
 This concept was introduced along with the notion of model hyperparameters.
 Both were relevant to subsequent sections and in particular to \cref{fig:log_loss_regularization_validation_curve}.
-There we showed that there is importance in model regularization by fitting a Logistic Regression classifier and comparing how its logloss varias across different regularization values.
+There we showed that there is importance in model regularization by fitting a Logistic Regression classifier and comparing how its logloss varies across different regularization values.
 This affected both the training and test set performance in a similar way.
 
 
@@ -107,7 +107,7 @@ As is common in the literature, in \cref{figure:dtree_overfit_problem_2} we saw 
 
 The same procedure was used to illustrate the concept of ``Cross Validation'' in \cref{fig:cv_vs_test_score}.
 We found that when making predictions on which users were endemic in the past, the test score was inside a one standard deviation band from the CV score, across a varying hyperparameter value for the Logistic Regression classifier.
-These findings are consistent with lots of other experiments found in the literature where by cross validating the search of optimal hyperparamters, we can have a fair estimation of the test error.
+These findings are consistent with lots of other experiments found in the literature where by cross validating the search of optimal hyperparameters, we can have a fair estimation of the test error.
 
 
 Towards the end of \cref{ch:modelSelection} we performed a deeper experimentation with this same problem and also on users that moved out of the endemic region.,
@@ -151,7 +151,7 @@ A similar result can be found for regularization models and on procedures where 
 Both optimizations improved improved the model's predictive power in varying degrees.
 
 
-The previous results outline a complete systematical Machine Learning approach and toolset used to evaluate the long-term migrations prediction problem.
+The previous results outline a complete systematical Machine Learning approach and tool set used to evaluate the long-term migrations prediction problem.
 In this way we provide a methodical way to analyze classifiers performing on this problem.
 With this we tackled the task with the introduction of new algorithms in the following chapters.
 
@@ -185,7 +185,7 @@ With this we showed, for each node, the attribute used in that splitting decisio
 
 These plots provided some insights into what features were initially being used by the algorithm to separate samples, according to their split index performance.
 For instance, in both fits the root split was based on the user's mobility diameter, with split values near to $47.5$ kilometres in both cases.
-This means that a mobility diameter of $47.5$ was the best split decision the algorithm could take in order to improve the gini index of the sub groups.
+This means that a mobility diameter of $47.5$ was the best split decision the algorithm could take in order to improve the Gini index of the sub groups.
 Recall here that the mobility diameter quantifies the user's area of influence given by his mobile connection.
 
 The other significant features, selected at splits near to the tree's root level, was the user's home antenna call count.
@@ -218,7 +218,7 @@ All of them are introduced with a brief explanation of their formulation and the
 
 For each of these, we successively experiment the same difficult predictive task.
 Where we look to tag users that migrated out of the endemic region, from time periods $T_0$ to $T_1$.
-In this way se set a common ground to compare and evaluate the algorithms.
+In this way   set a common ground to compare and evaluate the algorithms.
 % settled to compare and evaluate them on common ground.
 
 As we will see later in \cref{tab:master_table_results}, this task, \cref{target2}, happened to be the hardest one, as it resulted in the lowest metric scores for all classifiers.
@@ -241,27 +241,27 @@ This result is expected in this learner which is designed to lower the base mode
 The downside in this learner was that the optimizations run for longer, taking at least 20 minutes for both cases.
 
 These results for the Random Forest model were also compared to the Gradient Boosting model.
-The same two hyperparamters were validated across a range of values, and for each we looked at how the Training and CV scores varied.
+The same two hyperparameters were validated across a range of values, and for each we looked at how the Training and CV scores varied.
 Similarly, we found that this model's score won't be greatly affected by the number of trees used in the ensemble, and that most of its predictive performance can be captured by using only $20$ trees.
 Still, we note that the best-fit CV value was of $95$.
 
 For this learner, we also found that it will rapidly overfit the data once the base learners get a maximum depth of $6$.
-What was interesting here was that the mean CV $Accuracy$ constantly hovered around $86\%$, whilst the score for the training graudally improved as the tree-depth grew, up to a score of $96\%$.
-This algorithm rapidly overfits users that migrated out of the endemic region, which is similar to what we saw with the Decision Tree Learner.
+What was interesting here was that the mean CV $Accuracy$ constantly hovered around $86\%$, whilst the score for the training gradually improved as the tree-depth grew, up to a score of $96\%$.
+This algorithm rapidly over fits users that migrated out of the endemic region, which is similar to what we saw with the Decision Tree Learner.
 Still, and compared to the Forest learner, we get a better CV error, at the expense of a runtime which at least $50\%$ slower.
 
 % By comparing this problem over the various tree methods we discuss on applications that these kind of datasets can provide.
 % to these kinds of tasks was elaborated.
 
-In a second stage of experiments, we performed extensive testing both on the Random Forest and Gradient Tree Boosting learners for the problem of tagging the same users that migrated out of the endemic region, but only considering as userbase, those users which are currently living outside of the endemic region.
+In a second stage of experiments, we performed extensive testing both on the Random Forest and Gradient Tree Boosting learners for the problem of tagging the same users that migrated out of the endemic region, but only considering as user-base, those users which are currently living outside of the endemic region.
 
-For both, we ran a full CV procedure in two feature versions, one with all the features and one in which target-correleated features were removed.
+For both, we ran a full CV procedure in two feature versions, one with all the features and one in which target-correlated features were removed.
 
 As a general statement we can say that the Random Forests experiments have lower runtimes because take better advantage over the algorithm's parallelizability.
 Also, we can not affirm that one algorithms is strictly better over the other.
 Both of them exceed each other across different metrics.
 It seems overall that the Random Forest is better at correctly classifying positive instances, while the Booster is slightly better over the $Recall$.
-These asymmetrical performances across $Precision$ and $Recall$ scores resulted in that no algorith outperformed the other when evaluated using the $F1$ score.
+These asymmetrical performances across $Precision$ and $Recall$ scores resulted in that no algorithm outperformed the other when evaluated using the $F1$ score.
 Due to the low $Precision$ rates, both achieved low $F1$ scores with similar outcomes, where the maximum of these values was $37\%$.
 
 On other scores such as the $Accuracy$ and $ROC AUC$ the experiments showed high classifier rates, where all of these ranged between percentages of $83\%$ and $90\%$.
@@ -285,13 +285,13 @@ Below we can find a descriptive collection of those features for these learners,
 
 \begin{itemize}
 
-    \item Calls made in older months and in December: Interactions of different type, that occured closer to the split month between both periods $T_0$ and $T_1$ (July), were also distinguished.
+    \item Calls made in older months and in December: Interactions of different type, that occurred closer to the split month between both periods $T_0$ and $T_1$ (July), were also distinguished.
     The model frequently used interactions from the months of August and September, as well as December.
     We conjecture that this last result can be due to the fact that December is a month where user's increase their mobile activity with their families.
 
     \item Vulnerable calling patterns: As we first suspected in \cref{ch:descr-risk}, the vulnerability of the mobile interaction between users was relevant.
     Measurements such as the duration and volume of calls at different time periods where selected.
-    We make the reminder here that these measurments were the basis of our construction of the heatmaps in that same chapter.
+    We make the reminder here that these measurements were the basis of our construction of the heatmaps in that same chapter.
     Where the antennas plotted concentrated users with vulnerable calls by calling volume or time, for a given month.
 
     \item Mobility size: Finally, different measures of the distance in human mobility were determined to be important by the model. Both general mobility diameters and weekday or weeknight specific mobility endemic were relevant and on various occasions.
@@ -304,7 +304,7 @@ These factors identify strong predictors in long-term human mobility and provide
 Understanding these factors can further provide information into the problem of chagasic disease spread in the long run.
 
 As a final remark that we must add here, the previous best-features list carry some bias introduced by the model's feature-target correlations, because part of these best-features were selected from the experiments run with these same features.
-A similar argument can be made for the best-features calculated from the Gradient Boosting experiment that used only a filtered set of features, previously filterd by the Random Forest experiments.
+A similar argument can be made for the best-features calculated from the Gradient Boosting experiment that used only a filtered set of features, previously filtered by the Random Forest experiments.
 There is a strong feature-target correlation and there is a leakage of target information within this experiment.
 
 To look at a more thorough examination of these results and how they were selected, the reader can refer to \cref{tab:random_forest_big_experiment_best_features, tab:boosting_big_experiment_best_features}.
@@ -320,10 +320,10 @@ To look at a more thorough examination of these results and how they were select
 
 
 Given all of the previous findings we collected, we can say that there is no absolute single method that can be single-handedly applied to all problems and evaluation performances.
-However, our results outline that the Gradient Boosting methods were, in general, top performing for all tasks and classifiation metrics, except for the $F1$ score.
+However, our results outline that the Gradient Boosting methods were, in general, top performing for all tasks and classification metrics, except for the $F1$ score.
 
 Surprisingly enough, for some problems the Naive Bayes was outperforming in this $F1$ metric.
-The algorithm was more conservative in its positive predictions and this difference saw a tradeoff in its performance across other metrics.
+The algorithm was more conservative in its positive predictions and this difference saw a trade off in its performance across other metrics.
 
 However we can say that results show that the performance of Gradient Boosting models is best over other models such as Logistic Regression or Naive Bayes algorithms for most tasks, and slightly better over the Random Forests.
 These models can find complex interactions in the data whilst handling enough care not to lose generalization power.
@@ -380,7 +380,7 @@ The table shows the best-fit classifier's performance across three scores on the
 	\begin{table*}\centering
 		%\hskip-4.0cm
 		\caption{Master results table comparing results for all of the classifiers run in this work.
-			For each task and classifer, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}\label{tab:master_table_results}
+			For each task and classifier, we show the its $Accuracy$, $ROC AUC$ and $F1$ test-set scores, along with the runtimes of a full cross validation procedures on the learner.}\label{tab:master_table_results}
 		\ra{1.3}
 		%\hskip-4.0cm
 		\begin{tabular}{@{}rrrrrc@{}} \toprule
@@ -510,14 +510,14 @@ Both these scores were attained by the Naive Bayes algorithm for the problems of
 Interestingly enough, these poor scores for the Naive Bayes algorithm were, in comparison, much higher than the ones reached by any other classifier, when compared in relative terms.
 All of the other classifiers had extremely poor $F1$ performances in all of \cref{target2,target3,target4}.
 The best $F1$ score for the rest of the classifiers, across these problems, was $0.393$.
-This was attained by the Random Forest learner when tagging people that had migrated out of the endemic region, from a userbase of those who are currently non-endemic.
+This was attained by the Random Forest learner when tagging people that had migrated out of the endemic region, from a user-base of those who are currently non-endemic.
 
 We mentioned this situation earlier for the experiments specifically performed on this same \cref{target4}.
 We saw that all of the learner's output a very low $Precision$ score and this impacted the overall $F1$ score.
 
 The overconfidence shown by the models derived a high misclassification rate for the samples in the positive class.
 This error was so strong, that it drove the $F1$ scores to low values, even when they output acceptable $Recall$ scores.
-Still, the tradeoff in the the precision of their positive predictions was very strong.
+Still, the trade-off in the the precision of their positive predictions was very strong.
 
 We mentioned that this situation might appear in highly unbalanced classification problems, such as the ones we are working with here.
 The overconfidence effect in learners is affected by the unbalanced target class.
@@ -550,7 +550,7 @@ Under this view we would say that with this dataset provides enough information 
 The performance metrics were more than satisfactory, building best-fit models which could accurately tag users under the $ROC AUC$ and $Accuracy$ metrics.
 Also, when compared to the Logistic Classifier, in some cases we see that they both have notable gain in the metrics and for others, such as for the first problem, the Logistic model is on par.
 
-On the other end of the spectrum, we had that the Naive Bayes model had the worst $ROC AUC$ and $Accuracy$ scores for all problems where it reachead a maximum $Accuracy$ of $84\%$ for the problem of predicting users that were from the endemic region in $T_0$.
+On the other end of the spectrum, we had that the Naive Bayes model had the worst $ROC AUC$ and $Accuracy$ scores for all problems where it reached a maximum $Accuracy$ of $84\%$ for the problem of predicting users that were from the endemic region in $T_0$.
 
 And the next best metric was a maximum $ROC AUC$ of $76\%$ for the case of tagging migrants that moved out of the endemic region, but only making predictions over users that are non-endemic in $T_1$.
 These results show that we also had acceptable rates for a model that is not expected to perform.
