aspell model selection chapter

--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -241,7 +241,7 @@ Consider \cref{target3} which has a high imbalance between the positive and nega
 Here we use a Decision Tree classifier, to try and produce a model which overfits $\mathcal{T}$.
 This model can increase complexity by considering the depth of the tree.
 In turn, this increases the number of features used in by the leaner to decide on the predicted target.
-It is clear her that higher depth implies incresing model complexity\footnote{A detailed explanation of this technique can be found later in \cref{section:decision_trees}.}.
+It is clear her that higher depth implies increasing model complexity\footnote{A detailed explanation of this technique can be found later in \cref{section:decision_trees}.}.
 
 To score the model, we take a monotonically increasing scoring function where
 higher values mean better scores.
@@ -291,7 +291,7 @@ To do this, the authors build a measure, the VC dimension, as an important value
 Here we provide only a mention of VC dimension for the purpose of showing a theoretical approach to error estimation in machine learning methods\footnote{For a complete explanation on this topic, refer to \textcite{vapnik-nature2000}}.
 
 Vapnik-Chervonenkis propose a theoretical framework to effectively characterize these dimensions in a constructive way.
-With this, they give analytic bounds to estimate the distance between the empirical error and the generalization erro for a number of machine learning algorithms.
+With this, they give analytic bounds to estimate the distance between the empirical error and the generalization error for a number of machine learning algorithms.
 It also provides methods to calculate these dimensions for different class of functions in a constructive way.
 
 %since it effectively provides a tractable method to 
