--- a/ch_descriptions_risk.tex
+++ b/ch_descriptions_risk.tex
@@ -55,11 +55,11 @@ In total, data amounts to almost 10 billion calls.
 The Mexican data source is an anonymized dataset from a national mobile phone operator.
 Data is available for every call made within a period of 24 consecutive months.
 The raw logs contain at least 11 and at most 47 million daily calls.
-Each day, up to 8 million users accessed the telecommunication company's (\textit{telco}) network.
+Each day, up to 8 million users accessed the telecommunication company's (\textit{Telco}) network.
 Note that users from other companies are logged, as long as one of the users registering the call is a client of the operator.
 In practice, we only considered CDRs between users in $\calN_C$ since geolocalization was only possible for this group.
 
-Information logged for each call included the duration and timestamp of the call, the users participating in the call and the antenna id that transmitted the call to the \emph{telco} client.
+Information logged for each call included the duration and timestamp of the call, the users participating in the call and the antenna id that transmitted the call to the \emph{Telco} client.
 Adding all data elements, the project involved working with more than 1 terabyte of data.
 The data was compressed using \emph{gzip}\footnote{For more information on this file format, please refer to Wikipedia's article on this subject: \url{https://en.wikipedia.org/wiki/Gzip}} format.
 The call logs, in this data format, were parsed, processed, transformed and loaded to create the datasets which were structured as needed by this project.
@@ -93,7 +93,7 @@ Earlier versions of this research were presented by \cite{sarraute2015descubrien
 at \emph{Simposio Internacional sobre Enfermedades Desatendidas},
 and\cite{deMonasterio2016analyzing} at \emph{International Conference on Advances in Social Networks Analysis and Mining}.
 
-The generated maps display a geographical representation with the telco's antennas situated on the map.
+The generated maps display a geographical representation with the Telco's antennas situated on the map.
 And for each antenna, a circle is drawn which represents, graphically, the volume of usage of that antenna and the vulnerability of its users.
 We will expand on this last concept later by analyzing the importance of this variable in the detection of long-term migrations.
 
@@ -145,7 +145,7 @@ With the collected antenna properties, we generated heatmaps to visualize the me
 In them, a circle is generated for each cell, where:
 %	%Generamos un c\'irculo por cada celda donde:
 \begin{itemize}
-	\item the \textbf{area} depends on the number of telco users living in the antenna $N_a$.
+	\item the \textbf{area} depends on the number of Telco users living in the antenna $N_a$.
 	%el \textbf{\'area} depende de la cantidad de usuarios (habitantes),
 	\item the \textbf{color}, is related to the fraction ${V_a}/{N_a}$ of vulnerable users living there.
 	%		%el \textbf{color} corresponde al porcentaje de usuarios vulnerables que viven en esa antena.
@@ -358,7 +358,7 @@ Again, we generate two values for this attribute, considering (i) all antennas u
 We look at the social graph $\calG_C$ built from the CDRs, and the communications between nodes in $\calN_C$.
 
 For each edge $\left< n_i, n_j \right> \in \calE_C$, we dive into each of their interactions, segmenting call data with different criteria.
-For each month and each pair of users $\left< i,j \right>$, we gather the tuple $\left< time_{ij}, calls_{ij}, dir, period \right>$ where $time$ is the sum of all calls (in seconds), $calls$ is the number of calls exchanged, $dir$ is a boolean variable indicating whether the calls were incoming or outgoing (from user $i$'s point of view) and $period$ corresponds to a segmentation of the week into the periods \textit{weekday}, \textit{weeknight}, and \textit{weekend}.
+For each month and each pair of users $\left< i,j \right>$, we gather the tuple $\left< time_{ij}, calls_{ij}, direction, period \right>$ where $time$ is the sum of all calls (in seconds), $calls$ is the number of calls exchanged, $direction$ is a boolean variable indicating whether the calls were incoming or outgoing (from user $i$'s point of view) and $period$ corresponds to a segmentation of the week into the periods \textit{weekday}, \textit{weeknight}, and \textit{weekend}.
 
 
 In this sense, two users $u_i, u_j \in \calN_C, u_i \neq uj$ are \textbf{neighbors} in the social graph if $time_{ij} > 0$.
@@ -428,12 +428,12 @@ To create our model's input data, by means of relational database operations and
 
 To compare how this sampled population compares to country-wide distribution estimates,
 \cref{tab:distribution_by_state} shows the percentage of antennas, the percentage of the population (according to INEGI census 2014) and
-the percentage of telco users per state, for the top 10 Mexican states.
+the percentage of Telco users per state, for the top 10 Mexican states.
 % (wikipedia \url{https://en.wikipedia.org/wiki/Ranked_list_of_Mexican_states})
 
 
 \begin{table}[ht]
-	\caption{Table showing the mexican distribution of antennas, total population and telco users by state.}\label{tab:distribution_by_state}
+	\caption{Table showing the mexican distribution of antennas, total population and Telco users by state.}\label{tab:distribution_by_state}
 	\centering
 	\begin{tabular}{l r r r}
 		\toprule
@@ -489,7 +489,7 @@ shows the matrix of changes $C$, such that $C_{i, j}$ is the number of users tha
 As an example, lower left means was endemic, is now not endemic.
 
 \begin{table}[ht]
-	\caption{Matrix of user endemicity change across timeperiods $T_1$ and $T_2$.}\label{tab:changes}
+	\caption{Matrix of user endemicity change across time periods $T_1$ and $T_2$.}\label{tab:changes}
 	\centering
 	\begin{tabular}{l r r }
 		\toprule
